# Rust_network

./: Cargo.toml  README.md  deep_model.json  financial_deep_model.json
data/: Agence_00001.csv
src/: activation.rs  data_processor.rs  layer.rs  main.rs  network.rs
