[package]
name = "trait_course"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
ndarray = {version ="0.16.1", features = ["serde"]}
rand_distr = "0.4"
serde_json = "1.0"
csv = "1.3"
serde = {version = "1.0.228", features = ["derive"]}
plotters = "0.3.5"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
